<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.martemyanova.brainmap.MainActivity"
    android:background="@drawable/activity_background"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:text="@string/caption"
        android:letterSpacing="0.3"
        android:gravity="center"/>

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textSize="15sp"
        android:lineSpacingExtra="6sp"
        android:text="@string/text"
        android:gravity="center"/>

    <RadioGroup
        android:id="@+id/chartMode"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/btnYou"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@drawable/tab_text_selector"
            android:text="@string/btn_you"
            android:textSize="15sp"
            android:gravity="center"
            android:background="@drawable/tab_selector"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/btnAgeGroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@drawable/tab_text_selector"
            android:text="@string/btn_age_group"
            android:textSize="15sp"
            android:gravity="center"
            android:background="@drawable/tab_selector"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/btnProfession"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@drawable/tab_text_selector"
            android:text="@string/btn_profession"
            android:textSize="15sp"
            android:gravity="center"
            android:background="@drawable/tab_selector"
            android:button="@null"/>
    </RadioGroup>

    <com.martemyanova.brainmap.RadarChart
        android:id="@+id/radarChart"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center" />
    
</LinearLayout>
